# warden

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release.yml
deploy/: install-podman-server.sh
deploy/caddy/: Caddyfile
landing/: index.html  robots.txt  sitemap.xml  styles.css
landing/resources/: debugging-behind-enterprise-firewalls.html  index.html  local-llm-rtx-3060-warden.html  temporary-ssh-access-alternative.html
server/: .dockerignore  Dockerfile  go.mod  main.go  main_test.go  policy.default.json
server/go-backend/: go.mod  policy.default.json
server/web/: guest.html
server/web/assets/: guest.css  guest.js
warden-client/: Cargo.toml
warden-client/src/: app.rs  brand.rs  config.rs  errors.rs  main.rs
warden-client/src/ai/: mod.rs
warden-client/src/cli/: mod.rs
warden-client/src/platform/: mod.rs
warden-client/src/policy/: decision.rs  mod.rs
warden-client/src/runtime/: event.rs  mod.rs  session.rs  state.rs
warden-client/src/terminal/: backend.rs  hook.rs  mod.rs  shell.rs
warden-client/src/transport/: control.rs  message.rs  mod.rs  relay.rs
warden-client/src/ui/: mod.rs
