[package]
name = "warden-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "time"] }
thiserror = "1"
crossterm = "0.27"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "=0.20.1", features = ["rustls-tls-webpki-roots"] }
futures-util = "=0.3.31"
base64 = "0.22"
url = "=2.4.1"
indexmap = "=2.2.6"
libc = "0.2"
rustls = { version = "=0.21.12", features = ["dangerous_configuration"] }
